--- a/src/main/resources/css/login.css
+++ b/src/main/resources/css/login.css
@@ -1,36 +1,40 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #0e92b3;
 }
-.form{
+
+.form {
     width: 300px;
-    background-color: rgb(41,45,62);
+    background-color: rgb(41, 45, 62);
     color: #fff;
     border-radius: 2px;
     padding: 50px 80px 80px;
     border-radius: 10px;
-    box-shadow:
-            2px 2px 2px rgba(0,0,0,0.4);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
-.header{
+
+.header {
     text-align: center;
     font-size: 35px;
     text-transform: uppercase;
     line-height: 100px;
 }
-.info{
+
+.info {
     text-align: center;
     text-transform: uppercase;
 }
-.main .inpbox input{
-    background-color: rgb(41,45,62);
+
+.main .inpbox input {
+    background-color: rgb(41, 45, 62);
     border: 0;
     width: 100%;
     text-align: center;
@@ -38,8 +42,9 @@ body{
     color: #fff;
     outline: none;
 }
-.main .inpbox{
-    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+
+.main .inpbox {
+    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
     background-size: 400%;
     width: 100%;
     height: 50px;
@@ -50,16 +55,19 @@ body{
     justify-content: center;
     transition: all 1s;
 }
-.main .inpbox input{
+
+.main .inpbox input {
     height: calc(100% - 4px);
     width: calc(100% - 6px);
     border-radius: 30px;
 }
-.action{
+
+.action {
     display: flex;
     justify-content: center;
 }
-.action .btn{
+
+.action .btn {
     width: 60%;
     text-transform: uppercase;
     border: 2px solid #0e92b3;
@@ -69,19 +77,22 @@ body{
     cursor: pointer;
     transition: all 1s;
 }
-.main .inpbox:has(input:focus){
+
+.main .inpbox:has(input:focus) {
     animation: animate 5s linear infinite;
     transform: scale(1.2);
 }
+
 @keyframes animate {
-    0%{
+    0% {
         background-position: 0 0;
     }
-    100%{
+    100% {
         background-position: 400% 0;
     }
 }
-.action .btn:hover{
+
+.action .btn:hover {
     transform: scale(1.2);
     background-color: #0e92b3;
 }
