--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>登录页</title>
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
 <script>
     const element = document.getElementById("info");
     let innerText = element.innerText;
-    if(innerText != null && innerText !== ""){
+    if (innerText != null && innerText !== "") {
         alert(innerText);
     }
 </script>
